@@ -12,6 +12,7 @@ differs as follows:
 
 Changes for 1.0.0:
 
+- Metadata for individual devices can be obtained in the device management API.
 - The edgex_deviceobject type is renamed to edgex_deviceresource to reflect its
   naming in the profile definition.
 - The registry service is now identified by a URL, eg "consul://localhost:8500".
